Reset pending request type on network error

BUG=629305

Review-Url: https://codereview.chromium.org/2620373003
Cr-Commit-Position: refs/heads/master@{#443288}

Former-commit-id: 2bbd7cf1b775e07dc16f68a18386359cfc692c23